--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,26 @@ authors = ["qinhuajun <qinhuajun@outlook.com>"]
 edition = "2021"
 
 [dependencies]
-cortex-m = "0.7"
+cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7"
 panic-probe = { version = "1.0.0", features = ["defmt"] }
-defmt = { version = "1.0.1" }
-defmt-rtt = {version = "1.1.0"}
+defmt = "1.0.1"
+defmt-rtt = "1.1.0"
+static_cell = "2"
+embassy-sync = { version = "0.7.2", features = ["defmt"] }
+#stm32f4xx-hal = "0.23.0"
 
+[dependencies.embassy-stm32]
+version = "0.4.0"
+features = ["stm32f429ig", "memory-x", "single-bank", "defmt", "time-driver-any"]
 
-[dependencies.stm32f4xx-hal]
-version = "0.23.0"
-features = ["stm32f429"]
+[dependencies.embassy-executor]
+version = "0.9.1"
+features = ["arch-cortex-m", "executor-thread", "defmt"]
+
+[dependencies.embassy-time]
+version = "0.5.0"
+features = ["defmt", "defmt-timestamp-uptime"]
 
 [build-dependencies]
 reqwest = { version = "0.12.24", features = ["blocking"] }
