--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,15 @@ cortex-m = "0.7"
 cortex-m-rt = "0.7"
 panic-probe = { version = "1.0.0", features = ["defmt"] }
 defmt = { version = "1.0.1" }
-defmt-rtt = {version = "1.1.0"}
-
+defmt-rtt = { version = "1.1.0" }
+static_cell = "2.1"
+embedded-graphics = { version = "0.8.1" }
+embedded-hal = "1.0.0"
+stm32-fmc = "0.4.0"
 
 [dependencies.stm32f4xx-hal]
 version = "0.23.0"
-features = ["stm32f429"]
+features = ["stm32f429", "fmc", "stm32-fmc"]
 
 [build-dependencies]
 reqwest = { version = "0.12.24", features = ["blocking"] }
