--- a/Embed.toml
+++ b/Embed.toml
@@ -38,13 +38,13 @@ chip = "STM32F429IGTx"
 chip_descriptions = []
 # The default log level to be used. Possible values are one of:
 #   "OFF", "ERROR", "WARN", "INFO", "DEBUG", "TRACE"
-log_level = "WARN"
+log_level = "DEBUG"
 # Use this flag to assert the nreset & ntrst pins during attaching the probe to the chip.
 connect_under_reset = false
 
 [default.rtt]
 # Whether or not an RTTUI should be opened after flashing.
-enabled = false
+enabled = true
 # How the target handles RTT outputs that won't fit in the buffer.  This can be
 # overridden per-channel. If left unset, the firmware will determine the default
 # for each RTT up channel.
